# Advanced-Local-Conversational-RAG-by-EuBa-Code

./: .env.example  .gitignore  README.md  pyproject.toml
data/: 01_corporate_governance_vision.txt  02_nexus_technical_infrastructure.txt  03_hr_benefits_culture.txt  04_project_zephyr_case_study.txt  05_cybersecurity_zero_trust.txt  06_financial_sustainability_esg.txt  07_client_case_study_smartcity.txt  08_legal_ip_framework.txt  09_product_roadmap_aetheros.txt  10_customer_support_sla.txt
prompts/: prompts.txt
src/: app.py  config.py  eval_dataset.py  evaluate.py  ingest.py  list_models.py  streamlit_app.py
